--- a/DesignTemplate/UISample/UISample/MainPage.xaml
+++ b/DesignTemplate/UISample/UISample/MainPage.xaml
@@ -2,8 +2,11 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	mc:Ignorable="d" xmlns:Liquid="clr-namespace:Liquid;assembly=Liquid.RichText"
-	x:Class="UISample.MainPage" d:DesignWidth="800" d:DesignHeight="600">
+    
+	mc:Ignorable="d" xmlns:Liquid="clr-namespace:Liquid;assembly=Liquid.RichText" 
+    xmlns:local="clr-namespace:MyControlLibrary;assembly=MyControlLibrary"
+    xmlns:inf="clr-namespace:UISample"
+	x:Class="UISample.MainPage" d:DesignWidth="800" d:DesignHeight="600" Background="Black">
 	<UserControl.Resources>
 		<Storyboard x:Name="strbShowUnitGrid">
 			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="cnvAllControl" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
@@ -193,93 +196,18 @@
 		</Style>
 	</UserControl.Resources>
 
-	<Border x:Name="LayoutRoot" Background="Black">
-		<Grid x:Name="grdMain" Background="#FF0095d9" Width="800" Height="600">
-			<Rectangle x:Name="rctTop" Fill="#FF231f20" Stroke="Black" Height="70" StrokeThickness="0" VerticalAlignment="Top" Width="800"/>
-			<Rectangle x:Name="rctBottom" Fill="#FF231f20" Stroke="Black" Height="50" VerticalAlignment="Bottom" StrokeThickness="0" Width="800"/>
-			<TextBlock x:Name="txbLearningEng" Height="36" HorizontalAlignment="Left" Margin="10,-2,0,0" VerticalAlignment="Top" Width="309" Text="LEARNING ENGLISH" TextWrapping="Wrap" FontSize="26.667" FontWeight="Bold" Foreground="White" RenderTransformOrigin="0.5,0.5">
-				<TextBlock.Projection>
-					<PlaneProjection CenterOfRotationX="0" CenterOfRotationY="0"/>
-				</TextBlock.Projection>
-			</TextBlock>
-			<TextBlock x:Name="txbGrade10" Height="45" Margin="177,29,0,0" VerticalAlignment="Top" Text="GRADE 10" TextWrapping="Wrap" FontSize="29.333" FontWeight="Bold" Foreground="#FF0095D9" HorizontalAlignment="Left" Width="197"/>
-			<Canvas x:Name="cnvAllControl" Margin="0,-634,-912,0" RenderTransformOrigin="0.5,0.5" Height="450" VerticalAlignment="Top">
-				<Canvas.RenderTransform>
-					<TransformGroup>
-						<ScaleTransform/>
-						<SkewTransform/>
-						<RotateTransform/>
-						<TranslateTransform/>
-					</TransformGroup>
-				</Canvas.RenderTransform>
-				<Grid x:Name="grdDescription" Height="450" Width="220" Canvas.Left="504" RenderTransformOrigin="0.5,0.5">
-					<Grid.RenderTransform>
-						<TransformGroup>
-							<ScaleTransform/>
-							<SkewTransform/>
-							<RotateTransform/>
-							<TranslateTransform/>
-						</TransformGroup>
-					</Grid.RenderTransform>
-					<Rectangle x:Name="rctDesc" Fill="#FF231f20" Stroke="Black" RadiusX="10" RadiusY="10"/>
-					<TextBlock x:Name="txbDesc" FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="24,18,28,48"><Run FontWeight="Bold" Text="Reading"/><LineBreak/><Run Text="Description for Reading section..."/><LineBreak/><Run Text="This section has:..."/></TextBlock>
-				</Grid>
-				<Grid x:Name="grdSection" Height="450" Width="212" Canvas.Left="260" RenderTransformOrigin="0.5,0.5">
-					<Grid.RenderTransform>
-						<TransformGroup>
-							<ScaleTransform/>
-							<SkewTransform/>
-							<RotateTransform/>
-							<TranslateTransform/>
-						</TransformGroup>
-					</Grid.RenderTransform>
-					<Rectangle x:Name="rctSection" Fill="#FF231f20" Stroke="Black" RadiusX="10" RadiusY="10" Height="450" Width="212"/>
-					<TextBlock x:Name="txbChooseSection" Height="43" Text="Choose a section of the unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" HorizontalAlignment="Left" Width="158" TextAlignment="Center" Margin="25,0,0,17" VerticalAlignment="Bottom"/>
-					<TextBlock x:Name="txbReading" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Reading" TextWrapping="Wrap" Cursor="Hand" Margin="68,25,68,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbSpeaking" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Speaking" TextWrapping="Wrap" Cursor="Hand" Margin="64,64,64,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbListening" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Listening" TextWrapping="Wrap" Cursor="Hand" Margin="64,104,64,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbWriting" FontSize="16" FontWeight="Bold" Foreground="White" Text="Writing" TextWrapping="Wrap" Cursor="Hand" Height="25" Margin="71,146,70,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbLanguageFocus" FontSize="16" FontWeight="Bold" Foreground="White" Text="Language Focus" TextWrapping="Wrap" Cursor="Hand" Height="25" Margin="31,187,30,0" VerticalAlignment="Top"/>
-					<Rectangle x:Name="rctReading" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseMove="rctReading_MouseMove" MouseLeave="rctReading_MouseLeave" MouseLeftButtonDown="rctReading_MouseLeftButtonDown" Margin="0,25,0,0" VerticalAlignment="Top"/>
-					<Rectangle x:Name="rctSpeaking" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctSpeaking_MouseLeave" MouseLeftButtonDown="rctSpeaking_MouseLeftButtonDown" MouseMove="rctSpeaking_MouseMove" Margin="0,65,0,0" VerticalAlignment="Top"/>
-					<Rectangle x:Name="rctListening" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctListening_MouseLeave" MouseLeftButtonDown="rctListening_MouseLeftButtonDown" MouseMove="rctListening_MouseMove" Margin="0,103,0,0" VerticalAlignment="Top"/>
-					<Rectangle x:Name="rctWriting" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctWriting_MouseLeave" MouseLeftButtonDown="rctWriting_MouseLeftButtonDown" MouseMove="rctWriting_MouseMove" Margin="0,145,0,0" VerticalAlignment="Top"/>
-					<Rectangle x:Name="rctLanguageFocus" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctLanguageFocus_MouseLeave" MouseLeftButtonDown="rctLanguageFocus_MouseLeftButtonDown" MouseMove="rctLanguageFocus_MouseMove" Margin="0,187,0,0" VerticalAlignment="Top"/>
-				</Grid>
-				<Grid x:Name="grdUnit" Height="450" Width="173" RenderTransformOrigin="0.5,0.5" Canvas.Left="67">
-					<Grid.RowDefinitions>
-						<RowDefinition Height="0.662*"/>
-						<RowDefinition Height="0.338*"/>
-					</Grid.RowDefinitions>
-					<Grid.RenderTransform>
-						<TransformGroup>
-							<ScaleTransform/>
-							<SkewTransform/>
-							<RotateTransform/>
-							<TranslateTransform/>
-						</TransformGroup>
-					</Grid.RenderTransform>
-					<Rectangle x:Name="rctUnit" Stroke="Black" RadiusX="10" RadiusY="10" Height="450" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" Fill="#FF231F20" HorizontalAlignment="Left" Width="173">
-						<Rectangle.RenderTransform>
-							<TransformGroup>
-								<ScaleTransform/>
-								<SkewTransform/>
-								<RotateTransform/>
-								<TranslateTransform/>
-							</TransformGroup>
-						</Rectangle.RenderTransform>
-					</Rectangle>
-					<TextBlock x:Name="txbChooseUnit" Height="29" Text="Choose a unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" TextAlignment="Center" Margin="23,0,19,19" VerticalAlignment="Bottom" Grid.Row="1"/>
-					<Rectangle x:Name="rctUnit1" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" MouseLeave="rctUnit1_MouseLeave" MouseLeftButtonDown="rctUnit1_MouseLeftButtonDown" MouseMove="rctUnit1_MouseMove" Cursor="Hand" Margin="0,40,0,0" VerticalAlignment="Top"/>
-					<Rectangle x:Name="rctUnit2" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit2_MouseLeave" MouseLeftButtonDown="rctUnit2_MouseLeftButtonDown" MouseMove="rctUnit2_MouseMove" HorizontalAlignment="Right" Margin="0,79,0,0" VerticalAlignment="Top" Width="173"/>
-					<Rectangle x:Name="rctUnit3" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit3_MouseLeave" MouseLeftButtonDown="rctUnit3_MouseLeftButtonDown" MouseMove="rctUnit3_MouseMove" Margin="1,118,0,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbUnit1" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 1" TextWrapping="Wrap" Cursor="Hand" Margin="56,40,55,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbUnit2" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 2" TextWrapping="Wrap" Cursor="Hand" Margin="54,79,55,0" VerticalAlignment="Top"/>
-					<TextBlock x:Name="txbUnit3" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 3" TextWrapping="Wrap" Cursor="Hand" HorizontalAlignment="Left" Margin="52,118,0,0" VerticalAlignment="Top" Width="64"/>
-				</Grid>
-				<Rectangle x:Name="rctLeft" Fill="#FF231f20" Stroke="Black" Width="48" RadiusY="10" RadiusX="10" Height="450" d:LayoutOverrides="Height" Canvas.Left="-8"/>
-				<Rectangle Fill="#FF231f20" Stroke="Black" RadiusX="16" RadiusY="16" Height="450" Width="218" Canvas.Left="746"/>
-				<Canvas x:Name="cnvReading" Height="450" RenderTransformOrigin="0.5,0.5" Width="800" Canvas.Left="912">
+	<Grid x:Name="LayoutRoot" Height="600" Width="800" Background="Black">
+		<ScrollViewer x:Name="scvMain" Height="600" Width="800" Background="#FF0095d9">
+			<Grid Height="600" Width="800">
+				<Rectangle x:Name="rctTop" Fill="#FF231f20" Stroke="Black" Height="70" StrokeThickness="0" VerticalAlignment="Top" Width="800"/>
+				<Rectangle x:Name="rctBottom" Fill="#FF231f20" Stroke="Black" Height="50" VerticalAlignment="Bottom" StrokeThickness="0" Width="800" Margin="0,0,0,-10"/>
+				<TextBlock x:Name="txbLearningEng" Height="36" HorizontalAlignment="Left" Margin="10,-2,0,0" VerticalAlignment="Top" Width="309" Text="LEARNING ENGLISH" TextWrapping="Wrap" FontSize="26.667" FontWeight="Bold" Foreground="White" RenderTransformOrigin="0.5,0.5">
+					<TextBlock.Projection>
+						<PlaneProjection CenterOfRotationX="0" CenterOfRotationY="0"/>
+					</TextBlock.Projection>
+				</TextBlock>
+				<TextBlock x:Name="txbGrade10" Height="45" Margin="177,29,0,0" VerticalAlignment="Top" Text="GRADE 10" TextWrapping="Wrap" FontSize="29.333" FontWeight="Bold" Foreground="#FF0095D9" HorizontalAlignment="Left" Width="197"/>
+				<Canvas x:Name="cnvAllControl" Margin="0,-634,-912,0" RenderTransformOrigin="0.5,0.5" Height="450" VerticalAlignment="Top">
 					<Canvas.RenderTransform>
 						<TransformGroup>
 							<ScaleTransform/>
@@ -288,25 +216,99 @@
 							<TranslateTransform/>
 						</TransformGroup>
 					</Canvas.RenderTransform>
-					<Rectangle x:Name="rctReadingContent" Fill="#FF00172E" Stroke="Black" Height="450" Width="727" Canvas.Left="73" Opacity="0.35" StrokeThickness="0"/>
-					<TextBlock x:Name="txbReadingTitle" Height="28" Width="238" Canvas.Left="93" Canvas.Top="16" TextWrapping="Wrap" Foreground="#FFFFFEFE" Text="Unit 1 Reading" FontSize="18.667" FontWeight="Bold"/>
-					<Button x:Name="btnTriangle" Height="56" Style="{StaticResource triangleButton}" Width="32" Canvas.Top="186" Content="Button" Click="btnTriangle_Click" RenderTransformOrigin="0.5,0.5" Canvas.Left="12">
-						<Button.RenderTransform>
+					<Grid x:Name="grdDescription" Height="450" Width="220" Canvas.Left="504" RenderTransformOrigin="0.5,0.5">
+						<Grid.RenderTransform>
 							<TransformGroup>
 								<ScaleTransform/>
 								<SkewTransform/>
 								<RotateTransform/>
 								<TranslateTransform/>
 							</TransformGroup>
-						</Button.RenderTransform>
-					</Button>
-					<Button x:Name="bntPractice" Height="40" Width="104" FontSize="21.333" FontWeight="Bold" Content="Practice" Canvas.Left="120" Canvas.Top="402"/>
-					<Button x:Name="bntEnglish" Height="40" Width="104" FontSize="21.333" FontWeight="Bold" Content="English" Canvas.Left="304" Canvas.Top="402"/>
-					<Button x:Name="bntVietnam" Height="40" Width="232" FontSize="21.333" FontWeight="Bold" Content="Vietnammese" Canvas.Left="496" Canvas.Top="402"/>
-					<Liquid:RichTextBox x:Name="rtbxReading" Canvas.Left="73" Canvas.Top="48" Text="Đây là RichTextBox mình vừa add dll vào. H mọi người code phần reading trên canvas này nhe. Có thiếu control ji cứ thêm vào. Nhóm Design sẽ chỉnh sửa lại sao. Nếu ko có ji thì đừng nên &#xd;&#xa;dịch chuyển vị trí các control nhe(amination chạy loạn á mà).&#xd;&#xa;&#xd;&#xa;À 1 vấn đề là khi hiển thị thì phan nội dung bên phải cửa sổ chương trình nó vẫn hiện lên=&gt; nên khi chạy nhin thay hết canvas Reading (xấu lắm). Tụi mình chưa sửa dc nên dùng 1 rectangle màu đen che đỡ. Bạn nao biết chỉ dùm lun.&#xd;&#xa;Thank all." TextWrapping="Wrap" Width="727" Height="330" FontSize="21.333" Background="#FF231F20" BorderThickness="0" Foreground="White"/>
+						</Grid.RenderTransform>
+						<Rectangle x:Name="rctDesc" Fill="#FF231f20" Stroke="Black" RadiusX="10" RadiusY="10"/>
+						<TextBlock x:Name="txbDesc" FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="24,18,28,48"><Run FontWeight="Bold" Text="Reading"/><LineBreak/><Run Text="Description for Reading section..."/><LineBreak/><Run Text="This section has:..."/></TextBlock>
+					</Grid>
+					<Grid x:Name="grdSection" Height="450" Width="212" Canvas.Left="260" RenderTransformOrigin="0.5,0.5">
+						<Grid.RenderTransform>
+							<TransformGroup>
+								<ScaleTransform/>
+								<SkewTransform/>
+								<RotateTransform/>
+								<TranslateTransform/>
+							</TransformGroup>
+						</Grid.RenderTransform>
+						<Rectangle x:Name="rctSection" Fill="#FF231f20" Stroke="Black" RadiusX="10" RadiusY="10" Height="450" Width="212"/>
+						<TextBlock x:Name="txbChooseSection" Height="43" Text="Choose a section of the unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" HorizontalAlignment="Left" Width="158" TextAlignment="Center" Margin="25,0,0,17" VerticalAlignment="Bottom"/>
+
+						<inf:uc_Reading x:Name="Reading" Margin="0,33,0,0" Height="28" VerticalAlignment="Top"/>
+						<inf:uc_Listening x:Name="Listening" Margin="0,89,0,0" Height="30" VerticalAlignment="Top"/>
+						<inf:uc_Speaking x:Name="Speaking" Margin="1,150,0,0" Height="30" VerticalAlignment="Top"/>
+						<inf:uc_Writing x:Name="Writing" Margin="0,209,0,210"/>
+						<inf:uc_LanguageFocus x:Name="LanguageFocus" Height="31" Margin="0,0,0,153" VerticalAlignment="Bottom"/>
+                        
+					</Grid>
+					<Grid x:Name="grdUnit" Height="450" Width="173" RenderTransformOrigin="0.5,0.5" Canvas.Left="67">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="0.662*"/>
+							<RowDefinition Height="0.338*"/>
+						</Grid.RowDefinitions>
+						<Grid.RenderTransform>
+							<TransformGroup>
+								<ScaleTransform/>
+								<SkewTransform/>
+								<RotateTransform/>
+								<TranslateTransform/>
+							</TransformGroup>
+						</Grid.RenderTransform>
+						<Rectangle x:Name="rctUnit" Stroke="Black" RadiusX="10" RadiusY="10" Height="450" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" Fill="#FF231F20" HorizontalAlignment="Left" Width="173">
+							<Rectangle.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform/>
+									<TranslateTransform/>
+								</TransformGroup>
+							</Rectangle.RenderTransform>
+						</Rectangle>
+						<TextBlock x:Name="txbChooseUnit" Height="29" Text="Choose a unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" TextAlignment="Center" Margin="23,0,19,19" VerticalAlignment="Bottom" Grid.Row="1"/>
+						<Rectangle x:Name="rctUnit1" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" MouseLeave="rctUnit1_MouseLeave" MouseLeftButtonDown="rctUnit1_MouseLeftButtonDown" MouseMove="rctUnit1_MouseMove" Cursor="Hand" Margin="0,40,0,0" VerticalAlignment="Top"/>
+						<Rectangle x:Name="rctUnit2" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit2_MouseLeave" MouseLeftButtonDown="rctUnit2_MouseLeftButtonDown" MouseMove="rctUnit2_MouseMove" HorizontalAlignment="Right" Margin="0,79,0,0" VerticalAlignment="Top" Width="173"/>
+						<Rectangle x:Name="rctUnit3" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit3_MouseLeave" MouseLeftButtonDown="rctUnit3_MouseLeftButtonDown" MouseMove="rctUnit3_MouseMove" Margin="1,118,0,0" VerticalAlignment="Top"/>
+						<TextBlock x:Name="txbUnit1" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 1" TextWrapping="Wrap" Cursor="Hand" Margin="56,40,55,0" VerticalAlignment="Top"/>
+						<TextBlock x:Name="txbUnit2" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 2" TextWrapping="Wrap" Cursor="Hand" Margin="54,79,55,0" VerticalAlignment="Top"/>
+						<TextBlock x:Name="txbUnit3" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 3" TextWrapping="Wrap" Cursor="Hand" HorizontalAlignment="Left" Margin="52,118,0,0" VerticalAlignment="Top" Width="64"/>
+					</Grid>
+					<Rectangle x:Name="rctLeft" Fill="#FF231f20" Stroke="Black" Width="48" RadiusY="10" RadiusX="10" Height="450" d:LayoutOverrides="Height" Canvas.Left="-8"/>
+					<Rectangle Fill="#FF231f20" Stroke="Black" RadiusX="16" RadiusY="16" Height="450" Width="218" Canvas.Left="746"/>
+					<Canvas x:Name="cnvReading" Height="450" RenderTransformOrigin="0.5,0.5" Width="800" Canvas.Left="912">
+						<Canvas.RenderTransform>
+							<TransformGroup>
+								<ScaleTransform/>
+								<SkewTransform/>
+								<RotateTransform/>
+								<TranslateTransform/>
+							</TransformGroup>
+						</Canvas.RenderTransform>
+						<Rectangle x:Name="rctReadingContent" Fill="#FF00172E" Stroke="Black" Height="450" Width="727" Canvas.Left="73" Opacity="0.35" StrokeThickness="0"/>
+						<TextBlock x:Name="txbReadingTitle" Height="28" Width="238" Canvas.Left="93" Canvas.Top="16" TextWrapping="Wrap" Foreground="#FFFFFEFE" Text="Unit 1 Reading" FontSize="18.667" FontWeight="Bold"/>
+						<Button x:Name="btnTriangle" Height="56" Style="{StaticResource triangleButton}" Width="32" Canvas.Top="186" Content="Button" Click="btnTriangle_Click" RenderTransformOrigin="0.5,0.5" Canvas.Left="12" Cursor="Hand">
+							<Button.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform/>
+									<TranslateTransform/>
+								</TransformGroup>
+							</Button.RenderTransform>
+						</Button>
+						<Button x:Name="bntPractice" Height="40" Width="104" FontSize="21.333" FontWeight="Bold" Content="Practice" Canvas.Left="120" Canvas.Top="402" Click="bntPractice_Click"/>
+						<Button x:Name="bntEnglish" Height="40" Width="104" FontSize="21.333" FontWeight="Bold" Content="English" Canvas.Left="304" Canvas.Top="402" Click="bntEnglish_Click"/>
+						<Button x:Name="bntVietnam" Height="40" Width="232" FontSize="21.333" FontWeight="Bold" Content="Vietnammese" Canvas.Left="496" Canvas.Top="402" Click="bntVietnam_Click"/>
+						<Liquid:RichTextBox x:Name="rtbxReading" Canvas.Left="73" Canvas.Top="48" TextWrapping="Wrap" Width="727" Height="330" FontSize="21.333" Background="#FF231F20" BorderThickness="0" Foreground="White"/>
+						<local:ReadingPracticeControl x:Name="rpcReadingPractice" Canvas.Left="73" Canvas.Top="48" Width="727" Height="330"/>
+					</Canvas>
 				</Canvas>
-			</Canvas>
-			<Rectangle x:Name="rctCheDo" Fill="Black" Stroke="Black" RadiusX="10" RadiusY="10" HorizontalAlignment="Right" Margin="0,0,-1008,16" Width="1008"/>
-		</Grid>
-	</Border>
+			</Grid>
+		</ScrollViewer>
+	</Grid>
 </UserControl>
